--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-　　　　	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　　　	<title>{{ page.title }}</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="zeroq得BLOG">
+		<!-- Le styles -->
+		<link href="/bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/bootstrap/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<!-- Le fav and touch icons -->
+		<link rel="shortcut icon" href="/bootstrap/bootstrap/ico/favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114"
+			  href="/bootstrap/bootstrap/ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72"
+			  href="/bootstrap/bootstrap/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="/bootstrap/bootstrap/ico/apple-touch-icon-57-precomposed.png">
+		<title>{{ page.title }}</title>
 	</head>
-	<body>
-　　　　{{ content }}
+	<body data-spy="scroll" data-target=".bs-docs-sidebar">
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#">zeroq得BLOG</a>
+					<div class="nav-collapse collapse">
+						<ul class="nav">
+							<!--
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+							-->
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span2">
+					<div class="well sidebar-nav">
+						<ul class="nav nav-list">
+							<li class="active"><a href="/">首页</a></li>
+							<li><a href="about.html">About Me</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="span10">
+					{{content}}
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="/bootstrap/js/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="/bootstrap/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
