--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="zeroq得BLOG">
 		<!-- Le styles -->
-		<link href="/bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/bootstrap/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<!-- Le fav and touch icons -->
-		<link rel="shortcut icon" href="/bootstrap/bootstrap/ico/favicon.ico">
+		<link rel="shortcut icon" href="/bootstrap/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114"
-			  href="/bootstrap/bootstrap/ico/apple-touch-icon-114-precomposed.png">
+			  href="/bootstrap/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72"
-			  href="/bootstrap/bootstrap/ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="/bootstrap/bootstrap/ico/apple-touch-icon-57-precomposed.png">
+			  href="/bootstrap/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="/bootstrap/ico/apple-touch-icon-57-precomposed.png">
 		<title>{{ page.title }}</title>
 	</head>
 	<body data-spy="scroll" data-target=".bs-docs-sidebar">
@@ -58,6 +58,6 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="/bootstrap/js/jquery-1.7.1.min.js"></script>
-		<script type="text/javascript" src="/bootstrap/bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
