--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,16 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="zeroq得BLOG">
+		<style type="text/css">
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+
+			.sidebar-nav {
+				padding: 9px 0;
+			}
+		</style>
 		<!-- Le styles -->
 		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
