--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="zeroq得BLOG">
+		<meta name="description" content="zeroq的BLOG">
 		<style type="text/css">
 			body {
 				padding-top: 60px;
@@ -39,14 +39,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#">zeroq得BLOG</a>
+					<a class="brand" href="#">zeroq的小作坊</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<!--
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="#about">About</a></li>
-							<li><a href="#contact">Contact</a></li>
-							-->
+							<li class="active"><a href="/">blog</a></li>
+							<li><a href="#album">Album</a></li>
 						</ul>
 					</div>
 				</div>
