--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
 						<ul class="nav">
 							<li class="active"><a href="/">blog</a></li>
 							<li><a href="#album">Album</a></li>
+							<li><a href="/about.html">About Me</a></li>
 						</ul>
 					</div>
 				</div>
@@ -55,7 +56,11 @@
 					<div class="well sidebar-nav">
 						<ul class="nav nav-list">
 							<li class="active"><a href="/">首页</a></li>
-							<li><a href="about.html">About Me</a></li>
+							<li><a href="#">php</a></li>
+							<li><a href="#">c</a></li>
+							<li><a href="#">ios</a></li>
+							<li><a href="#">pmp</a></li>
+							<li><a href="#">生活</a></li>
 						</ul>
 					</div>
 				</div>
