--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 							<li><a href="#">c</a></li>
 							<li><a href="#">ios</a></li>
 							<li><a href="#">pmp</a></li>
-							<li><a href="#">生活</a></li>
+							<li><a href="#">life</a></li>
 						</ul>
 					</div>
 				</div>
