--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 							<ul>
     						{% for category in site.categories %}
     							<li>
-    								<a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} {{ category | last | size }}</a>
+    								<a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }}</a>({{ category | last | size }})
     							</li>
     						{% endfor %}
 							</ul>
