--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 					<a class="brand" href="#">zeroq的小作坊</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="/">blog</a></li>
+							<li class="active"><a href="/">Blog</a></li>
 							<li><a href="#album">Album</a></li>
 							<li><a href="/about.html">About Me</a></li>
 						</ul>
