--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 							<li class="active"><a href="/">首页</a></li>
     						{% for category in site.categories %}
     						<li>
-    							<a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }}</a> ({{ category | last | size }})
+    							<a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} ({{ category | last | size }})</a>
     						</li>
     						{% endfor %}
 						</ul>
