--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,9 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<div class="span2">
-					<div class="well sidebar-nav">
-						<ul class="nav nav-list">
-							<li class="active"><a href="/">首页</a></li>
+<!-- 					<div class="well sidebar-nav"> -->
+<!-- 						<ul class="nav nav-list"> -->
+<!-- 							<li class="active"><a href="/">首页</a></li> -->
     						{% for category in site.categories %}
 <!-- 
     						<li>
@@ -63,10 +63,10 @@
     						</li>
  -->
     						{% endfor %}
-						</ul>
-					</div>
+<!-- 						</ul> -->
+<!-- 					</div> -->
 				</div>
-				<div class="span10">
+				<div class="span12">
 					{{content}}
 				</div>
 			</div>
