--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -135,6 +135,7 @@ samp {
   _font-family: 'courier new', monospace;
   font-size: 1em;
   color:#f2f2f2;
+  background-color: #393939;
 }
 /* Improve readability of pre-formatted text in all browsers */
 pre {
