--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -724,6 +724,7 @@ pre {
   padding: 2px 5px;
   white-space: nowrap;
   background-color: #fff04a;
+  color:#2d2d2d;
 }
 .unit-article img {
   display: block;
